Fixed Issue With Color Code Accessibility, Added GitHub Repo Link To About Page, Changed Requirements For Parameters On Contrast Helper Function

--- a/src/components/ColorCode/ColorCode.scss
+++ b/src/components/ColorCode/ColorCode.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 2;
   &__value {
     text-align: center;  
     font-size: 11px;
